force-app/main/default/objects/Project_Task__c/Project_Task__c.object-meta.xml
<CustomObject>
    <label>Project Task</label>
    <nameField>
        <displayFormat>PROJ-{0000}</displayFormat>
        <label>Project Task no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>