force-app/main/default/objects/Project_Task__c/fields/Related_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project__c</fullName>
    <label>Related Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>