force-app/main/default/objects/Project_Task__c/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>