force-app/main/default/objects/Project_Task__c/validationRules/validation_for_due_date.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_for_due_date</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>due date cannot be in the past</errorMessage>
</ValidationRule>