force-app/main/default/objects/Project_Task__c/listViews/task_due_this_week.listView-meta.xml
<ListView>
    <fullName>task_due_this_week</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>task due this week</label>
</ListView>